prevent pull to reload on mobile devices

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,7 @@
+html {
+  overscroll-behavior: none;
+}
+
 html body {
   width: auto;
 }
